Fix for wrapping titles in the gallery page. Ticket#59

--- a/_css/Root_Project.css
+++ b/_css/Root_Project.css
@@ -615,7 +615,7 @@ a.navDown {
 	background-position: bottom right;
 	background-repeat: no-repeat;
 	overflow: hidden;
-	height: 400px;
+	height: 450px;
 }
 .GalleryColumn1Div p{
 	font-size:15px;
@@ -643,7 +643,7 @@ a.navDown {
 	background-position: bottom right;
 	background-repeat: no-repeat;
 	overflow: hidden;
-	height: 400px;
+	height: 450px;
 }
 .GalleryColumn2Div p{
 	font-size:15px;
@@ -670,7 +670,7 @@ a.navDown {
 	background-position: bottom right;
 	background-repeat: no-repeat;
 	overflow: hidden;
-	height: 400px;
+	height: 450px;
 }
 .GalleryColumn3Div p{
 	font-size: 15px;
